@@ -18,3 +18,4 @@ Hy Ginsberg (sapdb changes)
 Frank Tegtmeyer (patch for non-daemon mode, bug reports, mail services, documentation)
 Sean Reifschneider (rpm specs, build patches, psycopg PyDO driver)
 Brian Olsen (documentation)
+Nick Murtagh (PsycopgSessionStore)
